fixed blurred border at cover

--- a/css/creative.css
+++ b/css/creative.css
@@ -147,9 +147,13 @@ aside {
   }
 }
 .headerimage {
-  position: absolute;
-  width: 100%;
-  height: 100%;
+  position: fixed;
+  left: -4%;   /*remove blur border*/
+  top:-4%;     /*remove blur border*/
+  bottom:-4%;  /*remove blur border*/
+  right: -4%;  /*remove blur border*/
+  width: 108%;
+  height: 108%;
   min-height: auto;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -161,6 +165,7 @@ aside {
   color: white;
   -webkit-filter: blur(2px) brightness(40%);
   filter: blur(2px) brightness(40%);
+  z-index: -100;
 }
 header {
   position: relative;
@@ -217,6 +222,9 @@ header .header-content .header-content-inner p {
     margin-left: auto;
     margin-right: auto;
   }
+}
+.whitebackground {
+  background-color: #ffffff;
 }
 .section-heading {
   margin-top: 0;
